--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ npm-debug.log
 # secrets files as long as you replace their contents by environment
 # variables.
 prod.secret.exs
+/config/basic_auth.exs
